--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "mediAA"
 version = "0.1.0"
 edition = "2018"
+authors = ["Tanaka Shuto <shuto.tanaka.kos@gmail.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
