--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mediAA"
+name = "mediaa"
 version = "0.1.0"
 edition = "2018"
 authors = ["Tanaka Shuto <shuto.tanaka.kos@gmail.com>"]
@@ -7,3 +7,5 @@ authors = ["Tanaka Shuto <shuto.tanaka.kos@gmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+image = "0.23"
+getopts = "0.2"
