--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ authors = ["Tanaka Shuto <shuto.tanaka.kos@gmail.com>"]
 [dependencies]
 image = "0.23"
 getopts = "0.2"
+thiserror = "1.0.26"
+anyhow = "1.0.43"
